--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@plasmicapp/loader-nextjs": "^1.0.396",
     "next": "14.2.4",
+    "plasmic-supabase": "file:../plasmic-supabase/plasmic-supabase-0.1.0.tgz",
     "react": "^18",
     "react-dom": "^18"
   },
